add fuunction to call to fill ouut template

--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -27,4 +27,4 @@ html(lang="en")
             td= song.trackID
             td= song.trackName
             td= song.trackDisplayName
-            td= song.Length
+            td= song.length
