modify the table

--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -6,6 +6,22 @@ html(lang="en")
     link(href='/modules/dragula/dist/dragula.css' rel='stylesheet' type='text/css')
     link(href="/modules/@fortawesome/fontawesome-free/css/fontawesome.css" rel="stylesheet")
     link(href="/modules/@fortawesome/fontawesome-free/css/solid.css" rel="stylesheet")
+    style.
+      #songqueue {
+        border-collapse: collapse;
+        border: 1px solid #ddd;
+        width: 100%;
+      }
+      #songqueue td, #songqueue th {
+        border: 1px solid #ddd;
+        padding: 8px;
+        text-align: left;
+      }
+      #songqueue th {
+        background-color: #f2f2f2;
+        color: black;
+      }
+
   body
     h1 Current list of unverified songs from Robos DB
 
