--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -48,7 +48,7 @@ html(lang="en")
                     form(action='/updateArtistDisplayName' method='POST')
                         input(type='text' name='artistDisplayName', value=song.artistName)
                         input(type='hidden' name='artistID' value=song.artistID)
-                        button(type='submit') Update
+                        button(type='submit') UpdateDB
             td= song.trackID
             td= song.trackName
             td
@@ -58,5 +58,5 @@ html(lang="en")
                     form(action='/updateTrackDisplayName' method='POST')
                         input(type='text' name='trackDisplayName', value=song.trackName)
                         input(type='hidden' name='trackID' value=song.trackID)
-                        button(type='submit') Update
+                        button(type='submit') UpdateDB
             td= song.length
