--- a/templates/fullTop10.pug
+++ b/templates/fullTop10.pug
@@ -35,7 +35,7 @@ html(lang="en")
         tbody
         each song in songList
             tr
-            td= song.1
-            td= song.2
-            td= song.3
-            td= song.4
+            td= song.artist
+            td= song.track
+            td= song.points
+            td= song.plays
