--- a/templates/fullTop10.pug
+++ b/templates/fullTop10.pug
@@ -24,11 +24,13 @@ html(lang="en")
 
   body
     h1 Full Top 10
-    
-    form(action='/updateArtistDisplayName' method='POST')
-        input(type='text' name='artistDisplayName', value=song.artistName)
-        input(type='hidden' name='artistID' value=song.artistID)
-        button(type='submit') UpdateDB
+
+    form(action='/fulltop10' method='GET')
+        label(for='startDate') Start Date:
+        input#startDate(type='date' name='startDate' value=startDate)
+        label(for='endDate') End Date:
+        input#endDate(type='date' name='endDate' value=endDate)
+        input(type='submit' value='Update')
 
     table#songqueue
         thead
