--- a/templates/fullTop10.pug
+++ b/templates/fullTop10.pug
@@ -26,12 +26,17 @@ html(lang="en")
     h1 Full Top 10 for #{formStartDate} to #{formEndDate}
 
     ul
-        li a(href=`http://http://141.147.86.68:8585/fullTop10`) Full Top 10 Lists
-        li a(href=`http://http://141.147.86.68:8585/likesTop10`) Top 10 (Likes Only)
-        li a(href=`http://http://141.147.86.68:8585/mostplayedartists`) Most Played Artists
-        li a(href=`http://http://141.147.86.68:8585/mostplayedtracks`) Most Played Tracks
-        li a(href=`http://http://141.147.86.68:8585/summary`) Room Summary & Top DJs
-
+        li
+            a(href='http://141.147.86.68:8585/fullTop10') Full Top 10 Lists
+        li
+            a(href='http://141.147.86.68:8585/likesTop10') Top 10 (Likes Only)
+        li
+            a(href='http://141.147.86.68:8585/mostplayedartists') Most Played Artists
+        li
+            a(href='http://141.147.86.68:8585/mostplayedtracks') Most Played Tracks
+        li
+            a(href='http://141.147.86.68:8585/summary') Room Summary & Top DJs
+            
     form(action='/fulltop10' method='GET')
         label(for='startDate') Start Date:
         input#startDate(type='date' name='startDate' value=formStartDate)
