--- a/templates/fullTop10.pug
+++ b/templates/fullTop10.pug
@@ -1,4 +1,4 @@
-script(src='https://cdn.jsdelivr.net/npm/dayjs@1.10.4/dist/dayjs.min.js')
+script(src='https://cdn.jsdelivr.net/npm/dayjs@1.11.7/dayjs.min.js')
 
 doctype html
 html(lang="en")
