--- a/templates/fullTop10.pug
+++ b/templates/fullTop10.pug
@@ -77,3 +77,5 @@ html(lang="en")
             td= song.track
             td= song.points
             td= song.plays
+
+    script(src='https://cdn.jsdelivr.net/npm/dayjs@1.11.7/dayjs.min.js')
