--- a/templates/fullTop10.pug
+++ b/templates/fullTop10.pug
@@ -29,13 +29,13 @@ html(lang="en")
     li
         a(href=`http://141.147.86.68:8585/fullTop10?startDate=${linkStartDate}&endDate=${linkEndDate}`) Full Top 10 Lists
     li
-        a(href=`http://141.147.86.68:8585/likesTop10?startDate=${linkStartDate}}&endDate=${linkEndDate}`) Top 10 (Likes Only)
+        a(href=`http://141.147.86.68:8585/likesTop10?startDate=${linkStartDate}&endDate=${linkEndDate}`) Top 10 (Likes Only)
     li
-        a(href=`http://141.147.86.68:8585/mostplayedartists?startDate=${linkStartDate}}&endDate=${linkEndDate}`) Most Played Artists
+        a(href=`http://141.147.86.68:8585/mostplayedartists?startDate=${linkStartDate}&endDate=${linkEndDate}`) Most Played Artists
     li
-        a(href=`http://141.147.86.68:8585/mostplayedtracks?startDate=${linkStartDate}}&endDate=${linkEndDate}`) Most Played Tracks
+        a(href=`http://141.147.86.68:8585/mostplayedtracks?startDate=${linkStartDate}&endDate=${linkEndDate}`) Most Played Tracks
     li
-        a(href=`http://141.147.86.68:8585/summary?startDate=${linkStartDate}}&endDate=${linkEndDate}`) Room Summary & Top DJs
+        a(href=`http://141.147.86.68:8585/summary?startDate=${linkStartDate}&endDate=${linkEndDate}`) Room Summary & Top DJs
 
     form(action='/fulltop10' method='GET')
         label(for='startDate') Start Date:
