--- a/templates/likesTop10.pug
+++ b/templates/likesTop10.pug
@@ -68,7 +68,8 @@ html(lang="en")
             tr
                 th Artist
                 th Track
-                td Total Points
+                td Upvotes
+                td Downvotes
                 th Play Count
         tbody
         each song in top10NotWednesdaySongList
