--- a/templates/summary.pug
+++ b/templates/summary.pug
@@ -44,6 +44,8 @@ html(lang="en")
         input#endDate(type='date' name='endDate' value=formEndDate)
         input(type='submit' value='Update')
 
+    h2 Summary
+
     table#songqueue
         thead
             tr
@@ -59,7 +61,7 @@ html(lang="en")
             td= row.upvotes
             td= row.downvotes
 
-    h2 Not including Wednesdays (less 90s)
+    h2 Top DJs
 
     table#songqueue
         thead
