--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -46,13 +46,13 @@ html(lang="en")
                     | #{song.artistDisplayName}
                     form(action='/updateArtistDisplayName' method='POST')
                         input(type='hidden' name='reset' value=true)
-                        input(type='hidden' name='byrecent' value=req.body.byrecent)
+                        input(type='hidden' name='byrecent' value='#{req.query.byrecent}')
                         input(type='hidden' name='artistID' value=song.artistID)
                         button(type='submit') Reset
                 else
                     form(action='/updateArtistDisplayName' method='POST')
                         input(type='text' name='artistDisplayName', value=song.artistName)
-                        input(type='hidden' name='byrecent' value=req.body.byrecent)
+                        input(type='hidden' name='byrecent' value='#{req.query.byrecent}')
                         input(type='hidden' name='artistID' value=song.artistID)
                         button(type='submit') UpdateDB
             td= song.trackID
@@ -62,13 +62,13 @@ html(lang="en")
                     | #{song.trackDisplayName}
                     form(action='/updateTrackDisplayName' method='POST')
                         input(type='hidden' name='reset' value=true)
-                        input(type='hidden' name='byrecent' value=req.body.byrecent)
+                        input(type='hidden' name='byrecent' value='#{req.query.byrecent}')
                         input(type='hidden' name='trackID' value=song.trackID)
                         button(type='submit') Reset
                 else
                     form(action='/updateTrackDisplayName' method='POST')
                         input(type='text' name='trackDisplayName', value=song.trackName)
-                        input(type='hidden' name='byrecent' value=req.body.byrecent)
+                        input(type='hidden' name='byrecent' value='#{req.query.byrecent}')
                         input(type='hidden' name='trackID' value=song.trackID)
                         button(type='submit') UpdateDB
             td= song.length
