--- a/templates/fullTop10.pug
+++ b/templates/fullTop10.pug
@@ -59,7 +59,7 @@ html(lang="en")
             td= song.points
             td= song.plays
 
-    h2 80s Only (No 90s or covers)
+    h2 80s Only (No 90s or Covers)
 
     table#songqueue
         thead
@@ -105,7 +105,7 @@ html(lang="en")
                 td Total Points
                 th Play Count
         tbody
-        each song in top10WednesdaySongList
+        each song in top10FridaySongList
             tr
             td= song.artist
             td= song.track
