--- a/templates/mostplayedtracks.pug
+++ b/templates/mostplayedtracks.pug
@@ -59,7 +59,7 @@ html(lang="en")
             td= song.points
             td= song.plays
 
-    h2 Not including Wednesdays (less 90s)
+    h2 80s Only (excluding 90s and Covers day)
 
     table#songqueue
         thead
@@ -69,7 +69,7 @@ html(lang="en")
                 td Total Points
                 th Play Count
         tbody
-        each song in top10NotWednesdaySongList
+        each song in top1080sSongList
             tr
             td= song.artist
             td= song.track
